--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hello! This is my portfolio website</h1>
     <h2>Currently under construction</h2>
+    <a href="page2.html">Go to Page 2</a>
 </body>
 </html>
